--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -14,10 +14,14 @@ jobs:
         node-version: [14.x, 16.x, 18.x, 20.x]
     steps:
     - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8.5.0
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
+    - run: pnpm install --frozen-lockfile
     - run: pnpm lint
     - run: pnpm test
