--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "devDependencies": {
     "husky": "^8.0.3",
     "standard": "^17.0.0"
+  },
+  "dependencies": {
+    "commander": "^10.0.1",
+    "semver": "^7.5.0"
   }
 }
