--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "standard": "^17.0.0"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^10.0.1",
     "semver": "^7.5.0"
   }
