--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "vermi",
   "version": "0.1.0",
   "description": "bare-bones and flexible versioning tool for javascript",
+  "homepage": "https://github.com/nickfla1/vermi#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nickfla1/vermi.git"
+  },
   "main": "index.js",
+  "bin": "./index.js",
   "scripts": {
     "lint": "standard",
     "prepare": "husky install",
