feat: add codecov coverage and tap

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -24,3 +24,5 @@ jobs:
         cache: 'pnpm'
     - run: pnpm install --frozen-lockfile
     - run: pnpm lint
+    - run: pnpm run test --coverage-report=cobertura
+    - uses: codecov/codecov-action@v3
