--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "bin": "./index.js",
   "scripts": {
     "lint": "standard",
+    "test": "tap",
     "prepare": "husky install",
     "bump": "node index.js version"
   },
@@ -22,11 +23,16 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "tap": "^16.3.4"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^10.0.1",
     "semver": "^7.5.0"
+  },
+  "tap": {
+    "check-coverage": true,
+    "coverage-map": "coverage-map.js"
   }
 }
