--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  PNPM_VERSION: 8.5.0
+
 jobs:
   quality:
     runs-on: ubuntu-latest
@@ -16,13 +19,26 @@ jobs:
     - uses: actions/checkout@v3
     - uses: pnpm/action-setup@v2
       with:
-        version: 8.5.0
+        version: $PNPM_VERSION
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
+        cache: pnpm
     - run: pnpm install --frozen-lockfile
     - run: pnpm lint
-    - run: pnpm run test --coverage-report=cobertura
-    - uses: codecov/codecov-action@v3
+    - run: pnpm run test
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: $PNPM_VERSION
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run test --coverage-report=cobertura
+      - uses: codecov/codecov-action@v3
