--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: pnpm/action-setup@v2
       with:
-        version: $PNPM_VERSION
+        version: "$PNPM_VERSION"
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -30,11 +30,12 @@ jobs:
     - run: pnpm run test
   coverage:
     runs-on: ubuntu-latest
+    needs: quality
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
-          version: $PNPM_VERSION
+          version: "$PNPM_VERSION"
       - uses: actions/setup-node@v3
         with:
           node-version: 20.x
