--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  PNPM_VERSION: 8.5.0
-
 jobs:
   quality:
     runs-on: ubuntu-latest
@@ -19,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: pnpm/action-setup@v2
       with:
-        version: "$PNPM_VERSION"
+        version: 8.5.0
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -35,7 +32,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
-          version: "$PNPM_VERSION"
+          version: 8.5.0
       - uses: actions/setup-node@v3
         with:
           node-version: 20.x
