--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -21,8 +21,22 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
+        cache: pnpm
     - run: pnpm install --frozen-lockfile
     - run: pnpm lint
-    - run: pnpm run test --coverage-report=cobertura
-    - uses: codecov/codecov-action@v3
+    - run: pnpm run test
+  coverage:
+    runs-on: ubuntu-latest
+    needs: quality
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.5.0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run test --coverage-report=json
+      - uses: codecov/codecov-action@v3
