--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "coveralls": "^3.1.1",
     "husky": "^8.0.3",
     "standard": "^17.0.0",
     "tap": "^16.3.4"
