--- a/.editorconfig
+++ b/.editorconfig
@@ -4,8 +4,10 @@ root = true
 end_of_line = lf
 charset = utf-8
 
-[*.js]
+[*.{js,json,ts}]
 insert_final_newline = true
-trim_trailing_whitespace = true
 indent_size = 2
 indent_style = space
+
+[*.{js,ts}]
+trim_trailing_whitespace = true
